--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,10 +1,5 @@
-NotBlank={0}は必須入力です
-NotNull={0}は必須入力です
-Length={0}は{2}文字以上{1}文字以下です
-Email={0}はxxx@xxx形式です
-typeMismatch.java.time.LocalDate={0}はuuuu-MM-dd形式です
-
-firstName=名
-lastName=姓
-email=メールアドレス
-birthday=誕生日
+# フォームクラスのバリデーションではこちらのメッセージが使われます。
+FirstName=名は1文字以上32文字以下です。
+LastName=姓は1文字以上32文字以下です。
+MailAddress=メールアドレスはxxx@xxx形式です。
+Birthday=誕生日はyyyy-MM-dd形式です。
